tests/pass/BitwiseOr.java
package pass;

import java.lang.System;

public class BitwiseOr {
    public int bitwiseOr(int a, int b) {
        return a | b;
    }

    public static void main(String[] args) {
        System.out.println(55 | 13);
    }
}
